Add new mutation operators